[huxiao] {add}: add NASA code

--- a/index.html
+++ b/index.html
@@ -2,15 +2,167 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>NASA</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>NASA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 
 <body>
-    <!-- Write Your Code Here!! -->
+  <header class="header">
+    <img class="logo" src="images/nasa-logo.svg" alt="logo" />
+    <nav class="nav">
+      <ul class="link1">
+        <a class="logo-link" href="#">Missions</a>
+        <a class="logo-link" href="#">Galleries</a>
+        <a class="logo-link" href="#">NASA TV</a>
+        <a class="logo-link" href="#">Follow NASA</a>
+        <a class="logo-link" href="#">Downloads</a>
+        <a class="logo-link" href="#">About</a>
+        <a class="link-last" href="#">NASA Audiences</a>
+        <img class="share" src="images/share.svg" alt="share" />
+        <div class="search">
+          <input class="search-text" type="text" placeholder="Search" />
+          <img class="search-img" src="images/search.svg" alt="search" />
+        </div>
+      </ul>
+      <ul class="link2">
+        <a class="logo-link link-down" href="#">Humans in Space</a>
+        <a class="logo-link link-down" href="#">Moon to Mars</a>
+        <a class="logo-link link-down" href="#">Earth</a>
+        <a class="logo-link link-down" href="#">Space Tech</a>
+        <a class="logo-link link-down" href="#">Flight</a>
+        <a class="logo-link link-down" href="#">Solar System and Beyond</a>
+        <a class="logo-link link-down" href="#">Education</a>
+        <a class="logo-link link-down" href="#">History</a>
+        <a class="link-down link-last" href="#">Benefits to You</a>
+      </ul>
+    </nav>
+  </header>
+  <section class="section">
+    <section class="sec1">
+      <div class="sec1-left model">
+        <div class="img-info">
+          <label class="label"><span>Dawn</span></label>
+          <p class="img-desc">Dusk for Dawn: Mission of Many Firsts to Gather More Data in Home Stretch</p>
+        </div>
+      </div>
+
+      <div class="sec1-right">
+        <div class="sec1-up">
+
+          <div class="sec1-up-left model">
+            <div class="img-info">
+              <label class="label"><span>Climate</span></label>
+              <p class="img-desc">A Scientist's Final Paper Looks<br />
+                Toward Earth's Future Climate</p>
+            </div>
+          </div>
+
+          <div class="sec1-up-right">
+            <h4>
+              NASA Events
+            </h4>
+            <a href="#">
+              Calling All Social Media User!
+              Apply to Experience the Launch of NASA's ICESat-2
+            </a>
+            <a href="#">
+              No Earlier Than Saturday,
+              Aug. 4, 4 a.m. EDT: Launch of Parker Solar Probe
+              from Cape Canaveral Air Force Station Florida
+            </a href="#">
+            <div>
+              <a href="#">
+                NASA TV Schedule
+              </a>
+              <a href="#">
+                Launches and Landings
+              </a>
+
+            </div>
+
+          </div>
+
+        </div>
+        <div class="sec1-down model">
+          <div class="img-info">
+            <p class="img-desc">July 16, 1969: Liftoff of Apollo 11</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="sec2">
+      <div class="sec2-left model">
+        <div class="img-info">
+          <label class="label"><span>Image of the Day</span></label>
+          <p class="img-desc">A Merger of Stars</p>
+        </div>
+      </div>
+
+      <div class="sec2-center model">
+        <div class="img-info">
+          <label class="label"><span>Asteroids</span></label>
+          <p class="img-desc">Observatories Team Up to Reveal Rare Double Asteroid</p>
+        </div>
+      </div>
+
+      <embed src=""/>
+      <iframe class="sec2-right model" src='http://player.youku.com/embed/XNDQ1MTM4OTkxMg==' frameborder=0></iframe>
+    </section>
+
+    <section class="sec3">
+      <div class="sec3-content sec3-content1 model">
+        <div class="img-info">
+          <label class="label"><span>About NASA</span></label>
+          <p class="img-desc">NASA Statement on Nomination for Agency Deputy Administrator</p>
+        </div>
+      </div>
+      <div class="sec3-content sec3-content2 model">
+        <div class="img-info">
+          <label class="label"><span>Juno</span></label>
+          <p class="img-desc">Juno NASA Data Indicate Another Possible Volcano on Jupiter Moon lo</p>
+        </div>
+      </div>
+      <div class="sec3-content sec3-content3 model">
+        <div class="img-info">
+          <label class="label"><span>Cassini</span></label>
+          <p class="img-desc">NASA's Cassini Coverage Lands an Emmy Nomination</p>
+        </div>
+      </div>
+      <div class="sec3-content sec3-content4 model">
+        <div class="img-info">
+          <label class="label"><span>Fermi Space Telescope</span></label>
+          <p class="img-desc">NASA's Fermi Traces Source of Cosmic Neutrino to Monster Black Hole</p>
+        </div>
+      </div>
+    </section>
+    <section class="sec4">MORE STORIES</section>
+
+    <footer class="footer">
+      <img class="footer-logo" src="images/nasa-logo.svg" alt="logo" />
+      <span>
+        National Aeronautics and Space Administration
+      </span>
+      <br />
+      <span>
+        NASA Official: Brian Dunbar
+      </span>
+      <ul class="footer-links">
+        <li><a>No Fear Act</a></li>
+        <li><a>FOIA</a></li>
+        <li><a>Privacy</a></li>
+        <li><a>Office of Inspector General</a></li>
+        <li><a>Office of Special Counsel</a></li>
+        <li><a>Agency Financial Reports</a></li>
+        <li><a>Contact NASA</a></li>
+      </ul>
+    </footer>
+  </section>
+
+
 </body>
 
 </html>
