[huxiao] {add}: add background music

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <audio class="bg-music" loop="infinite" src="music/卡路里.mp3" autoplay></audio>
   <header class="header">
     <img class="logo" src="images/nasa-logo.svg" alt="logo" />
     <nav class="nav">
